# yggdrasil-rapidjson

./: CHANGELOG.md  CMakeLists.txt  TODO.txt  YggdrasilRapidJSON.pc.in  YggdrasilRapidJSONConfig.cmake.in  YggdrasilRapidJSONMacros.cmake  _units.html  allocators_8h_source.html  annotated.html  annotated_dup.js  base64_8h_source.html  biginteger_8h_source.html  classes.html  classrapidjson_1_1_allocator.html  classrapidjson_1_1_auto_u_t_f_input_stream-members.html  classrapidjson_1_1_auto_u_t_f_input_stream.html  classrapidjson_1_1_auto_u_t_f_output_stream-members.html  classrapidjson_1_1_auto_u_t_f_output_stream.html  classrapidjson_1_1_base64_input_stream_wrapper-members.html  classrapidjson_1_1_base64_input_stream_wrapper.html  classrapidjson_1_1_base64_output_stream_wrapper-members.html  classrapidjson_1_1_base64_output_stream_wrapper.html  classrapidjson_1_1_base64_writer.html  classrapidjson_1_1_basic_i_stream_wrapper-members.html  classrapidjson_1_1_basic_i_stream_wrapper.html  classrapidjson_1_1_basic_o_stream_wrapper-members.html  classrapidjson_1_1_basic_o_stream_wrapper.html  classrapidjson_1_1_cleanup_locals-members.html  classrapidjson_1_1_cleanup_locals.html  classrapidjson_1_1_crt_allocator-members.html  classrapidjson_1_1_crt_allocator.html  classrapidjson_1_1_cursor_stream_wrapper-members.html  classrapidjson_1_1_cursor_stream_wrapper.html  classrapidjson_1_1_encoded_input_stream-members.html  classrapidjson_1_1_encoded_input_stream.html  classrapidjson_1_1_encoded_input_stream_3_01_u_t_f8_3_4_00_01_memory_stream_01_4-members.html  classrapidjson_1_1_encoded_input_stream_3_01_u_t_f8_3_4_00_01_memory_stream_01_4.html  classrapidjson_1_1_encoded_output_stream-members.html  classrapidjson_1_1_encoded_output_stream.html  classrapidjson_1_1_encoding.html  (+365 more)
.github/workflows/: conda_recipe.yml  docs.yml  test-suite.yml
CMakeModules/: CodeCoverage.cmake  FindGTestSrc.cmake
conda.recipe/: build.bat  build.sh  conda_build_config.yaml  recipe.yaml
conda.recipe/tests/: run_test.bat
doc/: CMakeLists.txt  Doxyfile.in  schema.md  units.md  yggdrasil.md
doc/html/: index.html
example/: CMakeLists.txt  traverseaspointer.cpp
example/archiver/: archiver.cpp
example/capitalize/: capitalize.cpp
example/condense/: condense.cpp
example/filterkey/: filterkey.cpp
example/filterkeydom/: filterkeydom.cpp
example/jsonx/: jsonx.cpp
example/lookaheadparser/: lookaheadparser.cpp
example/messagereader/: messagereader.cpp
example/parsebyparts/: parsebyparts.cpp
example/pretty/: pretty.cpp
example/prettyauto/: prettyauto.cpp
example/schemanormalizer/: schemanormalizer.cpp
example/schemavalidator/: schemavalidator.cpp
example/serialize/: CMakeLists.txt  serialize.cpp
example/simpledom/: simpledom.cpp
example/simplepullreader/: simplepullreader.cpp
recipe/: bld.bat  build.sh  meta.yaml  run_test.bat
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_7.js  classes_8.js  functions_1.js  functions_12.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  (+46 more)
test/: CMakeLists.txt  example_python.py  full_schema.yml  valgrind-python.supp  valgrind.supp
test/perftest/: misctest.cpp  rapidjsontest.cpp  schematest.cpp
test/unittest/: CMakeLists.txt  allocatorstest.cpp  bigintegertest.cpp  clzlltest.cpp  cursorstreamwrappertest.cpp  docsschematest.cpp  documenttest.cpp  dtoatest.cpp  encodedstreamtest.cpp  encodingstest.cpp  filestreamtest.cpp  fwdtest.cpp  istreamwrappertest.cpp  itoatest.cpp  jsoncheckertest.cpp  namespacetest.cpp  normalizetest.cpp  ostreamwrappertest.cpp  platformtest.cpp  pointertest.cpp  prettywritertest.cpp  readertest.cpp  regextest.cpp  schematest.cpp  simdtest.cpp  strfunctest.cpp  stringbuffertest.cpp  strtodtest.cpp  unitstest.cpp  unittest.cpp  unittest.h  uritest.cpp  valuetest.cpp  writertest.cpp  yggtest.cpp
utils/: rename_package.py
zh-cn/: allocators_8h_source.html  annotated.html  base64_8h_source.html  biginteger_8h_source.html  classes.html  classrapidjson_1_1_allocator.html  classrapidjson_1_1_auto_u_t_f_input_stream-members.html  classrapidjson_1_1_auto_u_t_f_input_stream.html  classrapidjson_1_1_auto_u_t_f_output_stream-members.html  classrapidjson_1_1_auto_u_t_f_output_stream.html  classrapidjson_1_1_base64_input_stream_wrapper-members.html  classrapidjson_1_1_base64_input_stream_wrapper.html  classrapidjson_1_1_base64_input_stream_wrapper.js  classrapidjson_1_1_base64_output_stream_wrapper-members.html  classrapidjson_1_1_base64_output_stream_wrapper.html  classrapidjson_1_1_base64_output_stream_wrapper.js  classrapidjson_1_1_base64_writer.html  classrapidjson_1_1_basic_i_stream_wrapper-members.html  classrapidjson_1_1_basic_i_stream_wrapper.html  classrapidjson_1_1_basic_o_stream_wrapper-members.html  classrapidjson_1_1_basic_o_stream_wrapper.html  classrapidjson_1_1_cleanup_locals-members.html  classrapidjson_1_1_cleanup_locals.html  classrapidjson_1_1_crt_allocator-members.html  classrapidjson_1_1_crt_allocator.html  classrapidjson_1_1_cursor_stream_wrapper-members.html  classrapidjson_1_1_cursor_stream_wrapper.html  classrapidjson_1_1_encoded_input_stream-members.html  classrapidjson_1_1_encoded_input_stream.html  classrapidjson_1_1_encoded_input_stream_3_01_u_t_f8_3_4_00_01_memory_stream_01_4-members.html  classrapidjson_1_1_encoded_input_stream_3_01_u_t_f8_3_4_00_01_memory_stream_01_4.html  classrapidjson_1_1_encoded_output_stream-members.html  classrapidjson_1_1_encoded_output_stream.html  classrapidjson_1_1_encoding.html  classrapidjson_1_1_file_read_stream-members.html  classrapidjson_1_1_file_read_stream.html  classrapidjson_1_1_file_write_stream-members.html  classrapidjson_1_1_file_write_stream.html  classrapidjson_1_1_generic_array-members.html  classrapidjson_1_1_generic_array.html  (+336 more)
(+94 files in other folders)
